# serializer version: 1
# name: test_external_job_retrieval[0]
  '''
  {
    "pipelineSnapshotOrError": {
      "__typename": "PipelineSnapshot",
      "dagsterTypes": [
        {
          "key": "Any"
        },
        {
          "key": "Bool"
        },
        {
          "key": "Float"
        },
        {
          "key": "Int"
        },
        {
          "key": "Nothing"
        },
        {
          "key": "String"
        }
      ],
      "description": null,
      "externalJobSource": "airflow",
      "modes": [
        {
          "name": "default"
        }
      ],
      "name": "some_external_job",
      "pipelineSnapshotId": "c30aaa2b84acf973f65b059df9aa08515076eac4",
      "runTags": [],
      "solidHandles": [],
      "solids": [],
      "tags": [
        {
          "key": "dagster/external_job_source",
          "value": "airflow"
        }
      ]
    }
  }
  '''
# ---
# name: test_fetch_snapshot_or_error_by_active_pipeline_name_not_found[0]
  '''
  {
    "pipelineSnapshotOrError": {
      "__typename": "PipelineNotFoundError"
    }
  }
  '''
# ---
# name: test_fetch_snapshot_or_error_by_active_pipeline_name_success[0]
  '''
  {
    "pipelineSnapshotOrError": {
      "__typename": "PipelineSnapshot",
      "dagsterTypes": [
        {
          "key": "Any"
        },
        {
          "key": "Bool"
        },
        {
          "key": "Float"
        },
        {
          "key": "Int"
        },
        {
          "key": "Nothing"
        },
        {
          "key": "String"
        }
      ],
      "description": null,
      "externalJobSource": null,
      "modes": [
        {
          "name": "default"
        }
      ],
      "name": "tagged_job",
      "pipelineSnapshotId": "218c73b17f2251cdc2df27c8160efdb33db98c2d",
      "runTags": [
        {
          "key": "baz",
          "value": "quux"
        }
      ],
      "solidHandles": [
        {
          "handleID": "simple_op"
        }
      ],
      "solids": [
        {
          "name": "simple_op"
        }
      ],
      "tags": [
        {
          "key": "foo",
          "value": "bar"
        }
      ]
    }
  }
  '''
# ---
# name: test_fetch_snapshot_or_error_by_snapshot_id_snapshot_not_found[0]
  '''
  {
    "pipelineSnapshotOrError": {
      "__typename": "PipelineSnapshotNotFoundError",
      "snapshotId": "notthere"
    }
  }
  '''
# ---
# name: test_fetch_snapshot_or_error_by_snapshot_id_success[0]
  '''
  {
    "pipelineSnapshotOrError": {
      "__typename": "PipelineSnapshot",
      "dagsterTypes": [
        {
          "key": "Any"
        },
        {
          "key": "Bool"
        },
        {
          "key": "Float"
        },
        {
          "key": "Int"
        },
        {
          "key": "Nothing"
        },
        {
          "key": "String"
        }
      ],
      "description": null,
      "modes": [
        {
          "name": "default"
        }
      ],
      "name": "noop_job",
      "pipelineSnapshotId": "26275c305d757674f310100f62e286212668c614",
      "runTags": [],
      "solidHandles": [
        {
          "handleID": "noop_op"
        }
      ],
      "solids": [
        {
          "name": "noop_op"
        }
      ],
      "tags": []
    }
  }
  '''
# ---
